--- a/src/main/resources/assets/tweakedpetroleum/lang/en_us.lang
+++ b/src/main/resources/assets/tweakedpetroleum/lang/en_us.lang
@@ -20,3 +20,4 @@ jei.pumpjack.reservoir.power_usage= Reservoir power usage: %d RF/t
 jei.pumpjack.reservoir.lshift=Hold LShift for more info
 
 jei.pumpjack.reservoir.req_pipes=The pumpjack requires IE pipes built down to Bedrock
+jei.pumpjack.reservoir.draw_chance=This reservoir has a %d percent chance to drain from the chunk, this makes that reservoir effectively %d percent bigger
