--- a/src/main/resources/assets/tweakedpetroleum/lang/zh_cn.lang
+++ b/src/main/resources/assets/tweakedpetroleum/lang/zh_cn.lang
@@ -1,23 +1,23 @@
-jei.pumpjack.reservoir.max_size= Reservoir Max Size: %d mb
-jei.pumpjack.reservoir.min_size= Reservoir Min Size: %d mb
-jei.pumpjack.reservoir.replenishRate= Reservoir Replenish Rate %d mb/t
-jei.pumpjack.reservoir.speed= Reservoir Pump Speed %d mb/t
+jei.pumpjack.reservoir.max_size= 储层最大储量：%d mb
+jei.pumpjack.reservoir.min_size= 储层最小储量：%d mb
+jei.pumpjack.reservoir.replenishRate= 储层补给速率 %d mb/t
+jei.pumpjack.reservoir.speed= 储层抽取速率 %d mb/t
 
-jei.pumpjack.reservoir.weight=Reservoir Spawn Weight %d
+jei.pumpjack.reservoir.weight=储层生成权重 %d
 
-jei.pumpjack.reservoir.biomes=Biomes
-jei.pumpjack.reservoir.biome_whitelist= Biome Whitelist: %d
-jei.pumpjack.reservoir.biome_blacklist= Biome Blacklist: %d
+jei.pumpjack.reservoir.biomes=生物群系
+jei.pumpjack.reservoir.biome_whitelist= 生物群系白名单：%d
+jei.pumpjack.reservoir.biome_blacklist= 生物群系黑名单：%d
 
-jei.pumpjack.reservoir.dimensions=Dimensions
-jei.pumpjack.reservoir.dimension_whitelist= Dimension Whitelist: %d
-jei.pumpjack.reservoir.dimension_blacklist= Dimension Blacklist: %d
+jei.pumpjack.reservoir.dimensions=维度
+jei.pumpjack.reservoir.dimension_whitelist= 维度白名单：%d
+jei.pumpjack.reservoir.dimension_blacklist= 维度黑名单：%d
 
-jei.pumpjack.reservoir.power_tier=Reservoir Power Tier: %d
-jei.pumpjack.reservoir.power_capacity= Reservoir power capacity: %d RF
-jei.pumpjack.reservoir.power_usage= Reservoir power usage: %d RF/t
+jei.pumpjack.reservoir.power_tier=储层能量等级：%d
+jei.pumpjack.reservoir.power_capacity= 储层所需能量：%d RF
+jei.pumpjack.reservoir.power_usage= 储存消耗能量速率：%d RF/t
 
-jei.pumpjack.reservoir.lshift=Hold LShift for more info
+jei.pumpjack.reservoir.lshift=按住LSHIFT查看更多信息
 
-jei.pumpjack.reservoir.req_pipes=The pumpjack requires IE pipes built down to Bedrock
-jei.pumpjack.reservoir.draw_chance=This reservoir has a %d percent chance to drain from the chunk, this makes that reservoir effectively %d percent bigger
+jei.pumpjack.reservoir.req_pipes=采油机需要将IE管道建到基岩层
+jei.pumpjack.reservoir.draw_chance=该储层有 %d% 的几率从区块中流失，这使得该储液槽实际上增大 %d%
