--- a/src/main/resources/assets/tweakedpetroleum/lang/en_us.lang
+++ b/src/main/resources/assets/tweakedpetroleum/lang/en_us.lang
@@ -1,23 +1,23 @@
-jei.pumpjack.reservoir.max_size= Reservoir Max Size: %d mb
-jei.pumpjack.reservoir.min_size= Reservoir Min Size: %d mb
-jei.pumpjack.reservoir.replenishRate= Reservoir Replenish Rate %d mb/t
-jei.pumpjack.reservoir.speed= Reservoir Pump Speed %d mb/t
+tweakedpetroleum.jei.reservoir.max_size= Reservoir Max Size: %d mb
+tweakedpetroleum.jei.reservoir.min_size= Reservoir Min Size: %d mb
+tweakedpetroleum.jei.reservoir.replenishRate= Reservoir Replenish Rate %d mb/t
+tweakedpetroleum.jei.reservoir.speed= Reservoir Pump Speed %d mb/t
 
-jei.pumpjack.reservoir.weight=Reservoir Spawn Weight %d
+tweakedpetroleum.jei.reservoir.weight=Reservoir Spawn Weight %d
 
-jei.pumpjack.reservoir.biomes=Biomes
-jei.pumpjack.reservoir.biome_whitelist= Biome Whitelist: %d
-jei.pumpjack.reservoir.biome_blacklist= Biome Blacklist: %d
+tweakedpetroleum.jei.reservoir.biomes=Biomes
+tweakedpetroleum.jei.reservoir.biome_whitelist= Biome Whitelist: %d
+tweakedpetroleum.jei.reservoir.biome_blacklist= Biome Blacklist: %d
 
-jei.pumpjack.reservoir.dimensions=Dimensions
-jei.pumpjack.reservoir.dimension_whitelist= Dimension Whitelist: %d
-jei.pumpjack.reservoir.dimension_blacklist= Dimension Blacklist: %d
+tweakedpetroleum.jei.reservoir.dimensions=Dimensions
+tweakedpetroleum.jei.reservoir.dimension_whitelist= Dimension Whitelist: %d
+tweakedpetroleum.jei.reservoir.dimension_blacklist= Dimension Blacklist: %d
 
-jei.pumpjack.reservoir.power_tier=Reservoir Power Tier: %d
-jei.pumpjack.reservoir.power_capacity= Reservoir power capacity: %d RF
-jei.pumpjack.reservoir.power_usage= Reservoir power usage: %d RF/t
+tweakedpetroleum.jei.reservoir.power_tier=Reservoir Power Tier: %d
+tweakedpetroleum.jei.reservoir.power_capacity= Reservoir power capacity: %d RF
+tweakedpetroleum.jei.reservoir.power_usage= Reservoir power usage: %d RF/t
 
-jei.pumpjack.reservoir.lshift=Hold LShift for more info
+tweakedpetroleum.jei.reservoir.lshift=Hold LShift for more info
 
-jei.pumpjack.reservoir.req_pipes=The pumpjack requires IE pipes built down to Bedrock
-jei.pumpjack.reservoir.draw_chance=This reservoir has a %d percent chance to drain from the chunk, this makes that reservoir effectively %d percent bigger
+tweakedpetroleum.jei.reservoir.req_pipes=The pumpjack requires IE pipes built down to Bedrock
+tweakedpetroleum.jei.reservoir.draw_chance=This reservoir has a %d percent chance to drain from the chunk, this makes that reservoir effectively %d percent bigger
