--- a/src/main/resources/assets/tweakedpetroleum/lang/zh_cn.lang
+++ b/src/main/resources/assets/tweakedpetroleum/lang/zh_cn.lang
@@ -1,21 +1,17 @@
-tweakedpetroleum.jei.reservoir.max_size= 储层最大储量：%d mb
-tweakedpetroleum.jei.reservoir.min_size= 储层最小储量：%d mb
-tweakedpetroleum.jei.reservoir.replenishRate=储层补给速率 %d mb/t
-tweakedpetroleum.jei.reservoir.speed=储层抽取速率 %d mb/t
+tweakedpetroleum.jei.reservoir.max_size= §7储层最大储量：%d mB
+tweakedpetroleum.jei.reservoir.min_size= §7储层最小储量：%d mB
+tweakedpetroleum.jei.reservoir.replenishRate= §7储层补给速率: %d mB/t
+tweakedpetroleum.jei.reservoir.speed= §7储层抽取速率: %d mB/t
 
 tweakedpetroleum.jei.reservoir.weight=储层生成权重 %d
 
 tweakedpetroleum.jei.reservoir.biomes=生物群系
-tweakedpetroleum.jei.reservoir.biome_whitelist= 生物群系白名单：%d
-tweakedpetroleum.jei.reservoir.biome_blacklist= 生物群系黑名单：%d
+tweakedpetroleum.jei.reservoir.biome_whitelist= §7生物群系白名单：%d
+tweakedpetroleum.jei.reservoir.biome_blacklist= §7生物群系黑名单：%d
 
 tweakedpetroleum.jei.reservoir.dimensions=维度
-tweakedpetroleum.jei.reservoir.dimension_whitelist= 维度白名单：%d
-tweakedpetroleum.jei.reservoir.dimension_blacklist= 维度黑名单：%d
-
-tweakedpetroleum.jei.reservoir.power_tier=储层能量等级：%d
-tweakedpetroleum.jei.reservoir.power_capacity= 储层所需能量：%d RF
-tweakedpetroleum.jei.reservoir.power_usage= 储存消耗能量速率：%d RF/t
+tweakedpetroleum.jei.reservoir.dimension_whitelist= §7维度白名单：%d
+tweakedpetroleum.jei.reservoir.dimension_blacklist= §7维度黑名单：%d
 
 tweakedpetroleum.jei.reservoir.lshift=按住LSHIFT查看更多信息
 
