--- a/src/main/resources/assets/tweakedpetroleum/lang/zh_cn.lang
+++ b/src/main/resources/assets/tweakedpetroleum/lang/zh_cn.lang
@@ -3,6 +3,10 @@ tweakedpetroleum.jei.reservoir.min_size= §7储层最小储量：%d mB
 tweakedpetroleum.jei.reservoir.replenishRate= §7储层补给速率: %d mB/t
 tweakedpetroleum.jei.reservoir.speed= §7储层抽取速率: %d mB/t
 
+tweakedpetroleum.jei.reservoir.average= §7储层平均产量：%d mB
+tweakedpetroleum.jei.reservoir.average.time= §7储层将会在平均多少minecraft天耗尽：%d
+tweakedpetroleum.jei.reservoir.contents= §7这个储层包含：%d
+
 tweakedpetroleum.jei.reservoir.weight=储层生成权重 %d
 
 tweakedpetroleum.jei.reservoir.biomes=生物群系
